--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
-    "config": "^1.30.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "mongoose": "^5.1.0",
     "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1"
   }
 }
