Base backend (config express)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,8 +22,7 @@
             "always"
         ],
         "no-console" : [
-            "error",
-            { "allow" : ["warn", "error"] }
+            "off"
         ]
     }
 }
